// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CATEGORY_DISPLAY correctly with default value to N/A 1`] = `
.c2 {
  margin: 0;
  font-size: 1rem;
  color: #999A94;
}

.c3 {
  width: 12px;
}

.c3 > * {
  fill: #D1D2D3;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-basis: 0;
  -ms-flex-basis: 0;
  flex-basis: 0;
  margin: 0 4px;
  overflow: hidden;
}

.c1 > *:first-child {
  margin-bottom: 20px;
}

<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "items": Array [
          Object {
            "name": "name1",
            "value": "value1",
          },
          Object {
            "name": "name2",
            "value": "value2",
          },
        ],
      },
      "id": "id",
      "type": "CATEGORY_DISPLAY",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "name1",
        "name2",
      ]
    }
  >
    <DisplayStatus__Container>
      <div
        className="c0"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="c1"
          >
            <P
              color="grayBase"
            >
              <Component
                className="c2"
                color="grayBase"
              >
                <p
                  className="c2"
                  color="grayBase"
                >
                  name1
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="c3"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="c1"
          >
            <P
              color="grayBase"
            >
              <Component
                className="c2"
                color="grayBase"
              >
                <p
                  className="c2"
                  color="grayBase"
                >
                  name2
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="c3"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;

exports[`should render CATEGORY_DISPLAY correctly with first item 1`] = `
.c2 {
  margin: 0;
  font-size: 1rem;
  color: #999A94;
}

.c4 {
  width: 12px;
}

.c4 > * {
  fill: #D1D2D3;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c3 {
  width: 12px;
}

.c3 > * {
  fill: #69BE28;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-basis: 0;
  -ms-flex-basis: 0;
  flex-basis: 0;
  margin: 0 4px;
  overflow: hidden;
}

.c1 > *:first-child {
  margin-bottom: 20px;
}

<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "items": Array [
          Object {
            "name": "name1",
            "value": "value1",
          },
          Object {
            "name": "name2",
            "value": "value2",
          },
        ],
      },
      "id": "id",
      "type": "CATEGORY_DISPLAY",
      "values": Object {
        "value": "value1",
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "name1",
        "name2",
      ]
    }
    value={0}
  >
    <DisplayStatus__Container>
      <div
        className="c0"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="c1"
          >
            <P
              color="grayBase"
            >
              <Component
                className="c2"
                color="grayBase"
              >
                <p
                  className="c2"
                  color="grayBase"
                >
                  name1
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="success"
              >
                <StatusLight__Svg
                  color="success"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="c3"
                    color="success"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="c1"
          >
            <P
              color="grayBase"
            >
              <Component
                className="c2"
                color="grayBase"
              >
                <p
                  className="c2"
                  color="grayBase"
                >
                  name2
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="c4"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;

exports[`should render CATEGORY_DISPLAY correctly with second item 1`] = `
.c2 {
  margin: 0;
  font-size: 1rem;
  color: #999A94;
}

.c3 {
  width: 12px;
}

.c3 > * {
  fill: #D1D2D3;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c4 {
  width: 12px;
}

.c4 > * {
  fill: #69BE28;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-basis: 0;
  -ms-flex-basis: 0;
  flex-basis: 0;
  margin: 0 4px;
  overflow: hidden;
}

.c1 > *:first-child {
  margin-bottom: 20px;
}

<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "items": Array [
          Object {
            "name": "name1",
            "value": "value1",
          },
          Object {
            "name": "name2",
            "value": "value2",
          },
        ],
      },
      "id": "id",
      "type": "CATEGORY_DISPLAY",
      "values": Object {
        "value": "value2",
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "name1",
        "name2",
      ]
    }
    value={1}
  >
    <DisplayStatus__Container>
      <div
        className="c0"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="c1"
          >
            <P
              color="grayBase"
            >
              <Component
                className="c2"
                color="grayBase"
              >
                <p
                  className="c2"
                  color="grayBase"
                >
                  name1
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="c3"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="c1"
          >
            <P
              color="grayBase"
            >
              <Component
                className="c2"
                color="grayBase"
              >
                <p
                  className="c2"
                  color="grayBase"
                >
                  name2
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="success"
              >
                <StatusLight__Svg
                  color="success"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="c4"
                    color="success"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;
